# healthcheck

./: .gitignore  Dockerfile  Dockerfile.debian  Procfile  README.md  app.py  gunicorn.py  healthcheck_liveness.sh  healthcheckserver_liveness.sh  manage.py  pyproject.toml  requirements.txt  settings.py  status.py  test_status.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docker-publish.yml  image-build-scan.yml  multi-build.yaml  multi-build.yml  secret-scan.yml
healthcheck/: \  exceptions.py  healthcheck.py  healthcheckapp.py  healthcheckclient.py  healthcheckserver.py  healthcheckserverliveness.py  healthcheckservice.py  lists.py  locks.py  response.py  serializers.py  settings.py  shutdown.py  testevent.py  unitest.py  utils.py
healthcheck/checks/: __init__.py  base.py  check_http_headers.py  check_redirecturl.py  check_textresponse.py  httpheaders.py  httpstatus.py  jsonresponse.py  redirect.py  regexresponse.py  textresponse.py
healthcheck/socket/: __init__.py  base.py  connectiontype.py  socketclient.py  socketclient.py.bak  socketserver.py  status.py
healthcheck/socket/commands/: __init__.py  connections.py  editing_healthcheck.py  ping.py  shutdown.py
kustomize/: README.md  healthcheck.yaml  kustomization.yaml
kustomize/base/: deployment.yaml  deployment_hpa.yaml  kustomization.yaml  service.yaml  statefulset.yaml
kustomize/overlays/prod/: deployment_hpa.yaml  deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml  statefulset_patch.yaml
kustomize/overlays/uat/: data_pvc.yaml  data_pvc_patch.yaml  deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_healthcheckserver.yaml  service_healthcheckserver_patch.yaml  service_patch.yaml  statefulset_healthcheckserver.yaml  statefulset_healthcheckserver_patch.yaml  statefulset_patch.yaml
templates/: index.html
templates/healthcheck/: config_prtgsensor.html  customize.html  dashboard.html  edit.html  healthcheckhistory.html  index.html  preview.html  prtgsensor.html  publish.html  publishhistories.html  systemview.html
templates/healthcheck/inc/: healthcheck.css  healthcheck.js  healthcheckstatus.html  help.html  messages.html
