[project]
name = "healthcheck"
version = "1.3.5"
description = "Internal service endpoint health check for Spatial Support System"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "requests==2.32.4",
  "pytz===2025.2",
  "python-dotenv==1.1.0",
  "humanize==4.12.3",
  "defusedxml==0.7.1",
  "quart==0.20.0",
  "hypercorn==0.17.3",
]

[dependency-groups]
dev = ["ipython>=8.31.0", "pre-commit>=4.1.0"]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

[tool.djlint]
profile = "django"
