[project]
name = "healthcheck"
version = "1.3.6"
description = "Internal service endpoint health check for Spatial Support System"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "quart==0.20.0",
  "hypercorn==0.17.3",
  "pytz===2025.2",
  "python-dotenv==1.1.1",
  "httpx==0.28.1",
  "humanize==4.13.0",
  "defusedxml==0.7.1",
]

[dependency-groups]
dev = ["ipython>=9.4.0", "pre-commit>=4.3.0"]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E265", # Block comment should begin with '#'
  "E501", # Line too long
  "E722", # Bare except
]

[tool.djlint]
profile = "django"
