[project]
name = "healthcheck"
version = "1.3.8"
description = "Internal service endpoint health check for Spatial Support System"
authors = [
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Rocky Chen", email = "rocky.chen@dbca.wa.gov.au" },
]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "quart==0.20.0",
  "hypercorn==0.18.0",
  "pytz==2026.2",
  "python-dotenv==1.2.2",
  "httpx==0.28.1",
  "humanize==4.14.0",
  "defusedxml==0.7.1",
]

[dependency-groups]
dev = [
  "ipython>=9.14.1",
  "pre-commit>=4.6.0",
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E265", # Block comment should begin with '#'
  "E501", # Line too long
  "E722", # Bare except
]
